Cambio de Título

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Static Template</title>
+    <title>App Calculadora Propina SPLIT</title>
   </head>
   <body>
     <div class="container">
