implementación de cantidades arbitrarias

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <div class="row row-header">
+      <div class="row row-header controls">
         <div
           class="col-6 text-center selector"
           id="btn-split-eq"
@@ -188,7 +188,7 @@
           <button
             id="btn-setup-split-cus"
             class="btn btn-success"
-          >Ingresar Cantidades!</button>
+          >Yo pongo tanto:</button>
 
           <button
             id="btn-clear-split-cus"
